[package]
name = "factorial-zeros"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Fast count zeros in for $n!$"
repository = "https://github.com/oovm/power-mod"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "speed"
harness = false

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
