[package]
name = "graham-number"
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Calculate the graham number from last digits to left"
repository = "https://github.com/oovm/power-mod"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
