[package]
name = "graham-number"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Calculate the graham number from last digits to left"
repository = "https://github.com/oovm/power-mod"
documentation = "https://docs.rs/graham-number"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[dev-dependencies]

[features]
default = []
