[package]
name = "tetration"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Fast mod for $a ^ a ^ a ^ a % p$"
repository = "https://github.com/oovm/tower-mod"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
power-mod = "0.1.0"
num = "0.4.0"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
